<resources>

    <!-- Home Screen -->
    <string name="press_to_talk">Pressione para falar.</string>
    <string name="go_to_help">Ir para tela de ajuda.</string>
    <string name="go_to_settings">Abrir configurações.</string>
    <string name="go_to_cmd_list">Abrir lista de comandos.</string>
    <string name="back_to_home">Voltar para tela inicial.</string>
    <string name="back_to_cmd_list">Voltar para tela de lista de comandos.</string>
    <string name="back_to_cmd_descr">Voltar para tela de descrição do comando.</string>
    <string name="run_cmd">Executar o comando selecionado.</string>
    <string name="add_cmd">Adicionar novo comando.</string>
    <string name="add_new_alias">Adicionar novo apelido.</string>
    <string name="add_alias_confirm">Confirmar e voltar para descrição do comando.</string>
    <string name="new_cmd_input">Digite um nome para o comando.</string>
    <string name="add_cmd_confirm">Confirmar e voltar para lista de comandos.</string>
    <string name="run_cmd_popup">Deseja executar o comando </string>


    <!-- Description String -->
    <string name="speech_prompt_title">Diga algo</string>
    <string name="unsuportted_speech">Seu dispositivo não suporta reconhecimento de Voz</string>

    <!-- Main strings -->
    <string name="app_name">RITA</string>
    <string name="welcome">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
    </string>

    <string name="help_string">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi gravida libero nec velit.
        Morbi scelerisque luctus velit. Etiam dui sem, fermentum vitae, sagittis id, malesuada
    </string>

    <!-- Buttons -->
    <string name="back_button">Voltar</string>
    <string name="add_button">Adcionar</string>
    <string name="button_confirm">Confirmar</string>
    <string name="button_alias">Novo Apelido</string>
    <string name="button_run">Executar</string>
    <string name="button_alias_list">Apelidos</string>
    <string name="button_cancel">Cancelar</string>

    <!-- Menu -->
    <string name="title_activity_commands">Comandos</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="menu_main">Principal</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_contact_us">Fale Conosco</string>

    <!-- New Commad Screen Strings -->
    <string name="cmd_name">Nome do Comando</string>
    <string name="alias_name">Nome do Apelido</string>

    <!-- Commands Description -->
    <string name="alias_list_title">Lista de apelidos</string>
    <string name="confirm_run">Deseja executar o comando </string>

    <!-- New Alias Screen -->
    <string name="invalid_alias">Apelido inválido!</string>
    <string name="confirm_edit_text">Deseja alterar o apelido para </string>

    <!-- Commands -->
    <string name="command_1">Ligue as luzes</string>
    <string name="command_2">Abra a porta</string>
    <string name="apelidos">Apelidos</string>

    <!-- Settings -->
    <string name="calibration">Calibração</string>

    <!-- Others -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Grammar Strings -->
    <string-array name="cmd_prefix">
        <item>LIGAR</item>
    </string-array>

    <string-array name="cmd_appliance">
        <item>TELEVISAO</item>
        <item>VENTILADOR</item>
        <item>LUZ</item>
    </string-array>

    <string-array name="appliance_sufix">
        <item>CH 1</item>
        <item>CH 2</item>
        <item>CH 3</item>
        <item>CH 4</item>
        <item>CH 5</item>
        <item>CH 6</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
