<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tb.rita.delivery.NewCommandActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/press_to_talk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rita_icon" />

    <Button
        android:id="@+id/ncmd_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:adjustViewBounds="true"
        android:background="@drawable/default_btn"
        android:contentDescription="@string/add_cmd_confirm"
        android:onClick="onAddCmdPressed"
        android:scaleType="fitXY"
        android:text="@string/back_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/ncmd_confirm_btn"
        app:layout_constraintEnd_toStartOf="@+id/ncmd_confirm_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ncmd_confirm_btn"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ncmd_input_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cmd_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/ncmd_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/default_btn"
        android:contentDescription="@string/back_to_cmd_descr"
        android:onClick="onBackNAliasPressed"
        android:scaleType="fitXY"
        android:text="@string/button_confirm"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ncmd_back_btn"/>

    <RadioGroup
        android:id="@+id/ncmd_appliances"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ncmd_confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ncmd_input_text" />

</android.support.constraint.ConstraintLayout>