<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/descr_rita_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/press_to_talk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rita_icon" />

    <ImageView
        android:id="@+id/descr_line_sep2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descr_rita_icon"
        app:srcCompat="@drawable/linesep" />

    <ScrollView
        android:id="@+id/scroll_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scrollbarSize="@dimen/scrollbar_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descr_line_sep2">

        <TextView
            android:id="@+id/help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_string"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="90dp" />
    </ScrollView>

    <ImageView
        android:id="@+id/line_sep1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_help"
        app:srcCompat="@drawable/linesep" />

    <Button
        android:id="@+id/descr_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/default_btn"
        android:contentDescription="@string/back_to_home"
        android:onClick="OnBackPressed"
        android:text="@string/back_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_sep1"/>

</android.support.constraint.ConstraintLayout>