<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tb.rita.delivery.NewAliasActivity">

    <ImageButton
        android:id="@+id/nalias_rita_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/rita_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/nalias_line_sep1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nalias_rita_icon"
        app:srcCompat="@drawable/linesep"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/nalias_cmd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="COMMAND NAME"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nalias_line_sep1" />

    <ImageView
        android:id="@+id/nalias_line_sep2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nalias_cmd_name"
        app:srcCompat="@drawable/linesep"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/nalias_alias_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cmd_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nalias_line_sep2" />

    <Button
        android:id="@+id/nalias_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onAddButtonPressed"
        android:text="@string/add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/nalias_back_btn"
        app:layout_constraintTop_toBottomOf="@+id/nalias_alias_input" />

    <Button
        android:id="@+id/nalias_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackButtonPressed"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="@+id/nalias_confirm_btn"
        app:layout_constraintLeft_toRightOf="@+id/nalias_confirm_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nalias_confirm_btn" />
</android.support.constraint.ConstraintLayout>
